cloud_native_training_camp/04/httpserver/httpserver-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
  namespace: httpserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: chkinglee.me
      http:
        paths:
          - path: /httpserver/(.+)
            pathType: Prefix
            backend:
              service:
                name: httpserver
                port:
                  number: 8088
